# agentype

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README_zh.md  __init__.py  agentype_config.example.json  pyproject.toml  requirements.txt
agentype/: __init__.py
agentype/api/: __init__.py  annotation.py  celltype_analysis.py  data_processing.py  main_workflow.py
agentype/appagent/: __init__.py  example_usage.py  mcp_client_example.py  requirements.txt
agentype/appagent/agent/: __init__.py  celltype_annotation_agent.py
agentype/appagent/api/: main.py  models.py  routes.py  service.py
agentype/appagent/clients/: __init__.py  mcp_client.py
agentype/appagent/config/: __init__.py  cache_config.py  prompts.py  settings.py
agentype/appagent/llm/: __init__.py
agentype/appagent/locales/: en.json  zh.json
agentype/appagent/services/: __init__.py  mcp_server.py
agentype/appagent/tools/: celldex_download_tool.py  celldex_info_tool.py  celltypist_simple.py  file_validators.py  get_celldex_projects_bilingual.py  get_celltypist_models.py  get_sctype_tissues.py  run_sctype_test.py  sctype_simple.py  singleR_simple.py  species_detection.py  test_file_format_fallback.py
agentype/appagent/tools/r/: sctype_run.R
agentype/appagent/tools/r/sctype/: sctype_wrapper.R
agentype/appagent/utils/: __init__.py  common.py  content_processor.py  i18n.py  output_logger.py  parser.py  path_manager copy.py  path_manager.py  validator.py
agentype/common/: __init__.py  base_content_processor.py  base_parser.py  base_validator.py  language_manager.py  llm_client.py  llm_logger.py  log_token_parser.py  mcp_client.py  streaming_filter.py  token_statistics.py
agentype/config/: __init__.py  config_manager.py  unified_logger.py
agentype/dataagent/: __init__.py  api_usage_example.py  mcp_client_example.py  requirements.txt
agentype/dataagent/agent/: __init__.py  data_processor_agent.py
agentype/dataagent/api/: rest_server.py
agentype/dataagent/clients/: mcp_client.py
agentype/dataagent/config/: __init__.py  cache_config.py  prompts.py  settings.py
agentype/dataagent/llm/: __init__.py
agentype/dataagent/locales/: en.json  zh.json
agentype/dataagent/services/: mcp_server.py
agentype/dataagent/tools/: data_converters.py  filetool.py  save_marker_genes.py  save_marker_genes_r.R
agentype/dataagent/utils/: __init__.py  common.py  content_processor.py  i18n.py  output_logger.py  parser.py  path_manager.py  path_normalizer.py  validator.py
agentype/examples/: README.md  complete_workflow_example.py
agentype/mainagent/: main_agent.py  mcp_client_example.py
agentype/mainagent/agent/: __init__.py  main_react_agent.py
agentype/mainagent/clients/: __init__.py  mcp_client.py  subagent_client.py
agentype/mainagent/config/: __init__.py  cache_config.py  prompts.py  session_config.py  settings.py
agentype/mainagent/llm/: __init__.py
agentype/mainagent/locales/: en.json  zh.json
agentype/mainagent/services/: mcp_server.py
agentype/mainagent/tools/: __init__.py  adata_mapping.py  cluster_tools.py  file_paths_tools.py  mapping_tools.py  subagent_tools.py
agentype/mainagent/utils/: __init__.py  content_processor.py  i18n.py  output_logger.py  parser.py  path_manager.py  validator.py
agentype/prompts/: __init__.py  config.py  prompt_manager.py
agentype/prompts/en/: __init__.py  appagent_prompts.py  common_prompts.py  dataagent_prompts.py  mainagent_prompts.py  subagent_prompts.py
agentype/prompts/zh/: __init__.py  appagent_prompts.py  common_prompts.py  dataagent_prompts.py  mainagent_prompts.py  subagent_prompts.py
agentype/subagent/: __init__.py  analyze_clusters_from_csv.py  api_usage_example.py  mcp_client_example.py
agentype/subagent/agent/: __init__.py  celltype_react_agent.py
agentype/subagent/api/: main.py  models.py  routes.py  service.py
agentype/subagent/clients/: __init__.py  mcp_client.py
agentype/subagent/config/: cache_config.py  prompts.py  settings.py
agentype/subagent/llm/: __init__.py  logger.py
agentype/subagent/locales/: en.json  zh.json
agentype/subagent/services/: mcp_server.py  rest_api_server.py
agentype/subagent/tools/: __init__.py
agentype/subagent/tools/analysis/: __init__.py  gene_enrichment.py
agentype/subagent/tools/fetchers/: __init__.py  cellmarker_fetcher.py  panglaodb_fetcher.py
agentype/subagent/tools/ncbi/: __init__.py  gene_info_manager.py  ncbi_api_adapter.py
agentype/subagent/utils/: common.py  content_processor.py  file_utils.py  output_logger.py  parser.py  path_manager.py  validator.py
